--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,8 +48,8 @@ const metadata = {
         I'm a <strong>software engineering leader</strong> with a passion for solving customer's problems through software.
         <br/>
         <br/>
-        I've enjoyed launching and running high-scale commercial services for some of the world's larges technology companies.
-        I've also had the please of helping startups as they find product-market fit.
+        I've launched and run high-scale services for some of the world's larges technology companies.
+        I've also had the pleasure of helping startups as they find product-market fit.
     </Fragment>
   </Hero>
 </Layout>
