--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,8 +114,7 @@ const {
 
   <Features3
     title="What I do"
-    subtitle=`I get it; you want to know the size and the shape of my teams as it&#8217;s a quick way to see if I can manage (or build) a team for you.
-    You also want to understand that I&#8217;ve run high-scale systems.  Let me explain.`
+    subtitle=`Let me help you understand the size and the shape of my teams so you can quickly see if my experience is in line with your role.`
     columns={2}
     items={[
     {
@@ -123,9 +122,11 @@ const {
       description: `Over the past 8 years I&#8217;ve led teams with two
       levels of managers reporting to me and a recursive team size of around 90.  I&#8217;m based in Seattle and it&#8217;s common for me
       to have teams spread across the US and internationally.  My team&#8217;s products are often a significant piece of a
-      larger product portfolio.  In the past I&#8217;ve owned the Hybrid Identity features of Microsoft&#8217;s Entra ID,
-      the Prime / Checkout / Merchant portions of Amazon&#8217;s Buy With Prime product, and Continuous Delivery, Automated
-      testing, and Change Management tooling as part of Amazon&#8217;s Developer Productivity at AWS.  These systems process
+      larger product portfolio.  In the past I&#8217;ve owned the
+      <a class="underline" href="https://learn.microsoft.com/en-us/entra/identity/hybrid/">Hybrid Identity features of Microsoft&#8217;s Entra ID</a>,
+      the Prime / Checkout / Merchant portions of Amazon&#8217;s <a href="https://buywithprime.amazon.com" class="underline">Buy With Prime</a> product,
+      and Continuous Delivery, Automated testing, and Change Management tooling as part of <a href="https://aws.amazon.com/products/developer-tools/" class="underline">Amazon&#8217;s Developer Productivity</a> at AWS.
+      These systems process
       billions of records.  I&#8217;ve owned fleets of over 80,000 machines, serving over 100s of thousands of QPS.  On the
       business side, I lead and drive strategic plans for my area of ownership.  I work closely with my stakeholders to
       influence their strategies.`,
