--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,18 +61,18 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
     ]}
   >
     <Fragment slot="subtitle">
-      I&#8217m a <strong>software engineering leader</strong> and people manager with a passion for solving customer problems. I do this by
+      I&#8217;m a <strong>software engineering leader</strong> and people manager with a passion for solving customer problems. I do this by
       focusing on the most impactful deliverables, building cohesive teams, streamlining processes, and improving quality.
       <br />
       <br />
-      I&#8217ve launched and run high-scale services for some of the worlds largest technology companies. I&#8217ve also
+      I&#8217;ve launched and run high-scale services for some of the world&#8217;s largest technology companies. I&#8217;ve also
       worked in startups to invent the future.
     </Fragment>
   </Hero>
 
   <Features2
     title="How I work"
-    subtitle="Like all leaders, my role is to deliver on what is important to my business as fast as possible.  But each leader has their own way of achieving those goal.  Here is the way I like to work."
+    subtitle="Like all leaders, my role is to deliver on what is important to my business as fast as possible.  But each leader has their own way of achieving those goals.  Here is the way I like to work."
     columns={3}
     items={[
       {
@@ -84,7 +84,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
       {
         title: 'Alignment',
         description:
-          'I&apos;ve found that one of the most effective leavers to get higher quality work done more quickly is ensuring that <strong>everyone on the team knows what they&#8217;re responsible for and why</strong>.  By reviewing org structures, establishing goals, and by clarifying roles and responsibilities, it clears the way for people to focus on work that pushes the whole team in the same direction.',
+          'I&apos;ve found that one of the most effective levers to get higher quality work done more quickly is ensuring that <strong>everyone on the team knows what they&#8217;re responsible for and why</strong>.  By reviewing org structures, establishing goals, and by clarifying roles and responsibilities, it clears the way for people to focus on work that pushes the whole team in the same direction.',
         icon: 'tabler:arrows-minimize', // arrows-up, aspect-ratio
       },
       {
@@ -96,7 +96,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
       {
         title: 'Collaboration',
         description:
-          'When working with my direct reports, I encourage a <strong>collaborative environment</strong>.  I believe the best outcomes come when a range of opinions are be shared before coming to a decision.  And with a decision, my team works will work in unison to achieve our shared goals.',
+          'When working with my direct reports, I encourage a <strong>collaborative environment</strong>.  I believe the best outcomes come when a range of opinions are shared before coming to a decision. And with a decision, my team will work in unison to achieve our shared goals.',
         icon: 'tabler:heart-handshake',
       },
       {
@@ -135,7 +135,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
       title: 'Scope and Impact',
       description: `Over the past 8 years I&#8217;ve led teams with two
       levels of managers reporting to me and a recursive team size of around 90.  I&#8217;m based in Seattle and it&#8217;s common for me
-      to have teams spread across the US and internationally.  My team&#8217;s products are often a significant piece of a
+      to manage teams spread across the US and internationally.  My team&#8217;s products are often a significant piece of a
       larger product portfolio.  In the past I&#8217;ve owned the
       <a class="underline" href="https://learn.microsoft.com/en-us/entra/identity/hybrid/">Hybrid Identity features of Microsoft&#8217;s Entra ID</a>,
       the Prime / Checkout / Merchant portions of Amazon&#8217;s <a href="https://buywithprime.amazon.com" class="underline">Buy With Prime</a> product,
@@ -153,7 +153,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
     },
     {
       title: 'Influence and Decision Making',
-      description: `We don&#2019;t work in a bubble, we work in an ecosystem.  I work with leaders across an entire company to create alignment and drive collaboration.`,
+      description: `We don&#8217;t work in a bubble, we work in an ecosystem.  I work with leaders across an entire company to create alignment and drive collaboration.`,
       icon: 'tabler:shield-lock',
     },
     {
@@ -163,7 +163,7 @@ const { id, isDark = false, classes = {}, bg = await Astro.slots.render('bg') } 
     },
     {
       title: 'Judgement and Risk Management',
-      description: `I like getting work done which requires seeing around corners to predict unforeseen issues and think carefully where to invest effort.  My day-to-day management skills are strong in both project management and managing production systems. I actively manage risk and work with my teams so they improve their ability to identify and manage that risk.`,
+      description: `I like getting work done, which requires seeing around corners to predict unforeseen issues and thinking carefully about where to invest effort.  My day-to-day management skills are strong in both project management and managing production systems. I actively manage risk and work with my teams so they improve their ability to identify and manage that risk.`,
       icon: 'tabler:chevrons-up',
     },
   ]}
